Fix image sizing on mobile.

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -13,11 +13,11 @@
 
 #home #greetings img {
     margin: auto;
-    max-width: 600px;
+    max-width: 100%;
 }
 
 #home .carousel {
-    border: 0.8em solid rgb(236, 236, 236);
+    border: 0.6em solid rgb(236, 236, 236);
     margin-bottom: 2em;
 }
 
